{
    "name": "UserInput",
    "maps": [
        {
            "name": "Player_1",
            "id": "282a7281-e76d-4cf2-a815-ede83bec459e",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "fc395064-6e0a-4c31-a3dd-2af49dbeffd9",
                    "expectedControlType": "",
                    "processors": "Clamp",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "ccf52e3f-d7d3-4760-bf8a-e546ce2e1bec",
                    "expectedControlType": "",
                    "processors": "Clamp",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "387d0194-7c63-49bf-8055-fee1af8d617c",
                    "expectedControlType": "",
                    "processors": "Clamp",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Special",
                    "type": "Button",
                    "id": "eee77ef5-1c4b-4a7b-b600-50ff82c03d75",
                    "expectedControlType": "",
                    "processors": "Clamp",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "819753f4-a9f0-423a-9213-d26b4c7c5c6c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "982d20e2-cf0f-4100-bd83-37c69edd44b2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c5d61f7-c3ac-4440-8851-c5872cf70ab5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb5e28f1-7204-4000-a10e-0220a35d50f2",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Special",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player_2",
            "id": "d09b3d1c-7b36-429b-b56d-86e429191d07",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "a7ca8919-da6b-4e04-8831-62147df3c0c8",
                    "expectedControlType": "",
                    "processors": "Clamp(min=1,max=1)",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "5fcd398f-3962-423a-b8c9-06be33809d47",
                    "expectedControlType": "",
                    "processors": "Clamp(min=1,max=1)",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "adb6b3d6-0a85-4923-9333-3e1e484086be",
                    "expectedControlType": "",
                    "processors": "Clamp(min=1,max=1)",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Special",
                    "type": "Button",
                    "id": "e29170e3-1df7-4016-86ab-4241191c1341",
                    "expectedControlType": "",
                    "processors": "Clamp(min=1,max=1)",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2895cdf9-e19d-4486-95b2-de867f379263",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71f3c8a3-6569-4804-adef-d2b3969c8b95",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78d4acda-f634-4501-afbf-17cc5218ade4",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1beeb7c9-72ea-4503-a752-e86e78d83eff",
                    "path": "<Keyboard>/rightShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Special",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player_3",
            "id": "79ae9a4c-048a-4554-96b0-f28ec534ae18",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "0224e2fc-8bba-4f21-bb86-813342f67159",
                    "expectedControlType": "",
                    "processors": "Clamp(min=2,max=2)",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "c517c9eb-be06-45d2-85f6-3d5beb2a1112",
                    "expectedControlType": "",
                    "processors": "Clamp(min=2,max=2)",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "794ec878-5f57-4287-9933-3a7c68d4a1bc",
                    "expectedControlType": "",
                    "processors": "Clamp(min=2,max=2)",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Special",
                    "type": "Button",
                    "id": "b89ec26b-3a25-4d3b-a1f6-26f0c8c865ac",
                    "expectedControlType": "",
                    "processors": "Clamp(min=2,max=2)",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1f63db61-fd64-417f-8ef9-37c92e75e430",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87431cf5-8204-4755-b7be-17f147abcf0f",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f26c251-2943-4b78-b5cc-44897d96671e",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc939dd8-dfe9-4740-95b2-ab302f7e80a9",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Special",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ChangeInput",
            "id": "dda2290f-15c0-4568-adaa-c7b33eead8e9",
            "actions": [
                {
                    "name": "SetInput_1",
                    "type": "Value",
                    "id": "239e346f-d9c9-47f1-9633-c45dfbedda58",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SetInput_2",
                    "type": "Value",
                    "id": "d2b4f03a-6d88-400a-b11f-448d692b0e1f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SetInput_3",
                    "type": "Value",
                    "id": "5cf0ea1f-bb3b-45ea-b47e-42e373d2f2e9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "02c9f358-ea53-4c13-b6c4-39a19e4523f8",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "SetInput_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "792ce273-ae96-489e-9cb7-16e758b44946",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "Scale(factor=2)",
                    "groups": "",
                    "action": "SetInput_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cbaa5c98-7a67-4b80-8163-09c4bcce3c60",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "Scale(factor=3)",
                    "groups": "",
                    "action": "SetInput_3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}